--- a/css/style.css
+++ b/css/style.css
@@ -8,32 +8,54 @@ form{
   width: 700px;
   background-color: #C5CAE9;
   margin: 0 auto;
-  border-radius: 30px;
+  border-radius: 10px;
 }
 form input{
   font-size:1em;
   padding: 5px;
-  width: 100px;
+  width: 90px;
   margin: 10px;
   border: none;
   border-radius: 3px;
   outline: none;
 }
+input:nth-child(2){
+  border: 1px solid #F44336;
+}
+input:nth-child(4){
+  border: 1px solid #212121;
+}
 #start-btn{
   margin: 0 auto;
-  width: 100px;
-  height: 30px;
+  width: 110px;
+  height: 40px;
   background-color: #F44336;
   color: #fff;
   font-size: 1em;
-  border: none;
+  border: 1px solid #F44336;
   border-radius: 3px;
-  outline: none;
+
 }
-h1,h2{
+#start-btn:hover{
+  background-color: #fff;
+  color: #F44336;
+}
+h1,#player-turn{
   text-align: center;
 }
+
+.player-2{
+  color: #212121;
+}
+.player-1{
+  color: #F44336;
+}
+#player-turn{
+  display: none;
+}
+
 .game-board{
+  display: none;
   position: relative;
   width: 700px;
   height: 600px;
@@ -46,9 +68,9 @@ h1,h2{
 .cell{
   float:left;
   border-radius: 50px;
-  margin: 10px;
-  width: 80px;
-  height: 80px;
+  margin: 8px;
+  width: 84px;
+  height: 84px;
   background-color: #fff;
   transition: 1s;
 }
@@ -62,6 +84,7 @@ h1,h2{
   border-radius: 50px;
   opacity: 0;
   transition: 0.5s;
+  cursor: pointer;
 }
 .col:hover{
   opacity: 1;
